# MusicSheetsManager

./: CMakeLists.txt  README.md  clear.sql  config.cpp  config.h  consql.cpp  consql.h  datamigrater.cpp  datamigrater.h  datamigrater.ui  icons.qrc  importdialog.cpp  importdialog.h  importdialog.ui  init.sql  initdialog.cpp  initdialog.h  initdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manager.cpp  manager.h  manager.ui  metronome.cpp  metronome.h  metronome.ui  resource.qrc  scoreviewer.cpp  scoreviewer.h  scoreviewer.ui
